Display manipulated rather than visibility to avoid image being selected after click.

--- a/styles/base.css
+++ b/styles/base.css
@@ -204,7 +204,7 @@ img.resizeWidthToRegular {
 }
 
 .hidden {
-	visibility: hidden;
+	display: none;
 }
 
 .aroundImage  {
